-
Bug
-
Resolution: Done
-
P4: Low
-
5.4.0 RC
-
None
Last sentence of the warning in Detail Description section:
Current text: "When using native keys, shared memory is not protected against
multiple accesses on it (e.g. unable to lock()) and a user-defined mechanism
should be used to achieve a such protection."
Should perhaps be "to achieve such protection".
| For Gerrit Dashboard: QTBUG-42977 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 139231,2 | Doc: corrected minor language mistake | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |