Doc: corrected minor language mistake

Task-number: QTBUG-42977
Change-Id: Icdd70a41c9ef72224992d59342f4f97c65de78fc
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>